// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UnreadChannelIndicator should match snapshot 1`] = `
<div
  className="nav-pills__unread-indicator "
  id="unreadIndicatorundefined"
  onClick={[Function]}
  style={
    Object {
      "display": "none",
    }
  }
>
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;

exports[`components/UnreadChannelIndicator should match snapshot when content is an element 1`] = `
<div
  className="nav-pills__unread-indicator "
  id="unreadIndicatorundefined"
  onClick={[Function]}
  style={
    Object {
      "display": "block",
    }
  }
>
  <div>
    foo
  </div>
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;

exports[`components/UnreadChannelIndicator should match snapshot when content is text 1`] = `
<div
  className="nav-pills__unread-indicator "
  id="unreadIndicatorundefined"
  onClick={[Function]}
  style={
    Object {
      "display": "block",
    }
  }
>
  foo
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;

exports[`components/UnreadChannelIndicator should match snapshot when show is set 1`] = `
<div
  className="nav-pills__unread-indicator "
  id="unreadIndicatorundefined"
  onClick={[Function]}
  style={
    Object {
      "display": "block",
    }
  }
>
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;
